# advent_of_code_2025

./: .gitignore  README.md  justfile  pyproject.toml  run.py
scripts/: update_launch_default.py
src/day01/: expected_results.txt  task.txt  task1.py  task2.py
src/day02/: expected_results.txt  task.txt  task1.py  task2.py
src/day03/: expected_results.txt  task.txt  task1.py  task2.py
src/day04/: expected_results.txt  task.txt  task1.py  task2.py
src/day05/: expected_results.txt  task.txt  task1.py  task2.py
src/day06/: expected_results.txt  task.txt  task1.py  task2.py
src/day07/: expected_results.txt  task.txt  task1.py  task2.py
src/day08/: expected_results.txt  task.txt  task1.py  task2.py
src/day09/: expected_results.txt  task.txt  task1.py  task2.py
src/day10/: expected_results.txt  task.txt  task1.py  task2.py
src/day11/: expected_results.txt  task.txt  task1.py  task2.py
src/day12/: expected_results.txt  task.txt  task1.py  task2.py
