[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-safe-fixes = ["TC",]
select = [
    "A",       # prevent using keywords that clobber python builtins
    "B",       # bugbear: security warnings
    "C",       # Mccabe complexity
    "D",       # pydocstyle
    "E",       # pycodestyle
    "F",       # pyflakes
    "I",       # Isort. Import order
    "W",       # Warnings
    "UP",      # alert you when better syntax is available in your python version
    "ARG",     # flake8-Unused-Arguments
    "PIE",     # flake8-pie
    "RET",     # flake8-return
    "RUF",     # the ruff developer's own rules
    "SIM",     # flake8-Simplify
    "TC",      # Flake8-Type-Checking
    "COM",     # Flake8-Commas
    "PLR1714", # Merge repeated comparisons using a set
    "PLR5501", # Use elif instead of else then if, to reduce indentation
    "TID252"   # Prefer absolute imports over relative imports from parent modules
]

ignore = [
    "COM812",# Supress because it sometimes conflicts with the formatter.
    "E501",  # Supress line-too-long warnings: they are handled by the formater.
    "E712",  # Allow using if x == False, as it's not always equivalent to if x.
    "UP017", # Allow timezone.utc instead of datetime.UTC.
    "E731",  # Do not assign a lambda expression, use a def
    "B008",  # Do not perform function calls in argument defaults,
    "D"      # Ignore docstring errors
]
